# Tiandao-agent-sdk

./: .gitignore  README.md
.github/workflows/: publish.yml
agent-demo/: decision.py  launch_multi.py  main.py  pyproject.toml  tap_client.py  tiandao_mcp_server.py
clawhub-skill/tiandao-player/: SKILL.md
clawhub-skill/tiandao-player/scripts/: tiandao_mcp_server.py
docs/: OpenClaw接入指南.md  开发指南.md
docs/prompts/: journal_prompt.md
tiandao-cli/: README.md  pyproject.toml
tiandao-cli/src/tiandao_cli/: __init__.py  __main__.py  cli.py  server.py  tap_client.py
